--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@fontsource/anta": "^5.0.2",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
-    "@mui/x-charts": "^7.3.2",
+    "@mui/x-charts": "^7.5.0",
     "@mui/x-data-grid": "^7.3.2",
     "@mui/x-data-grid-generator": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tremor/react": "^3.16.3",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
